fixed styles so there wasnt anymore whitespace under the footer

--- a/src/components/PageFooter/PageFooter.scss
+++ b/src/components/PageFooter/PageFooter.scss
@@ -7,6 +7,11 @@
     justify-content: center;
     align-items: center;
     background-color: $background-color-two;
+    height: toRem(260);
+
+    @include tablet {
+        height: 50vh;
+    }
 
     &__copyright {
         padding: toRem(40) 0;
